Finalização da estilização dos components ButtonNewSession e NavBar

--- a/src/components/buttonComponent/ButtonNewSession.sass
+++ b/src/components/buttonComponent/ButtonNewSession.sass
@@ -1,12 +1,33 @@
 .custom-button 
-  background-color: #87E79B
+  background-color: #358366
   color: white
   padding: 12px 24px
-  font-size: 16px
+  font-size: 24px
   border-radius: 30px
   border:  none
-  
+  height: 60px
+  width: 95%
+  margin-top: 15px
+  margin-left: 17px
+  display: flex
+  align-items: center
+  justify-content: center
+
+  .div-icon-coffee-button
+    background-color: #ffffff
+    border-radius: 50%
+    width: 40px
+    height: 40px
+    display: flex
+    align-items: center
+    justify-content: center
+    margin-right: 20px
+    
+    .iconCoffeButton
+      font-size: 21px
+      color: #639f88
+      font-weight: bold
+      stroke-width: 5px;
 
 
-  
-
+    
