--- a/src/components/navBarComponent/NavBarComponent.sass
+++ b/src/components/navBarComponent/NavBarComponent.sass
@@ -1,14 +1,39 @@
 .navbar
-    background-color: #87E79B
-    height: 12%
+    background-color: #358366
+    height: 90px
     width: 94%
     display: flex
     align-items: center
     justify-content: space-between
     padding: 0 20px 
     
+    .profile-icon
+        height:60px
+        width: 60px
+        margin-top: 6px
+        color: #1c4f3c
+        
+
+    .search-container 
+        position: relative
+        display: flex
+        align-items: center
+
+    .searchbar
+        padding-left: 60px;
+        width: 400px
+        height: 50px
+        border: none 
+        border-radius: 8px
+        font-size: 16px;
+
+    .searchbar::placeholder 
+        color: #B0B0B0
 
 
-    .profile
-        height:50px
-        width: 50px
+    .search-icon 
+        position: absolute
+        left: 10px
+        color: black
+        font-size: 35px
+
